syntax = "proto2";
package rpc;

message echo_req {
	required string message = 1;
}

message echo_resp {
	required string message = 1;	
}